Fix home page layout bug in IE

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -468,6 +468,10 @@ form {
     .box:last-child {
       @include last;
     }
+
+    .box:nth-child(5) {
+      clear: left;
+    }
   }
 }
 
